initial pssm value computation set up done

--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,7 @@ dmypy.json
 data/pdbs/*.cif
 data/pdbs_clean/*.pdb
 data/secondary_structures/*.ss
+data/fastas/*.fasta 
+data/pssms/*.pssm
+3rd_party_items/*
 software_compilation_dir/*
