several bug solved while handling different proteins

--- a/.gitignore
+++ b/.gitignore
@@ -137,5 +137,6 @@ data/hbs/*
 data/msas/*.msa
 data/msas/*.a3m
 data/sasas/*.rsa
+data/features/*.pt
 3rd_party_items/*
 software_compilation_dir/*
