updated according to updated train-test set

--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,8 @@ data/msas/*.msa
 data/msas/*.a3m
 data/sasas/*.rsa
 data/features/*.pt
-data/features_keep/*.pt
+data/features_train/*.pt
+data/features_test/*.pt
 3rd_party_items/*
 software_compilation_dir/*
 outputs/argo_logs/*
